# gramine4ppc64

./: .gitignore  .travis.yml  .upstream  Makefile  build.sh  meson.build  rebase_it.sh  revert.sh  run_tests  run_tests.sh  run_tests0  run_tests1  run_tests2
Examples/apache/: httpd.manifest.template
Examples/bash/: manifest.template
Examples/busybox/: busybox.manifest.template
Examples/capnproto/: Makefile
Examples/curl/: curl.manifest.template
Examples/gcc/: Makefile  as.manifest.template  cc1.manifest.template  collect2.manifest.template  gcc.manifest.template  ld.manifest.template
Examples/lighttpd/: lighttpd.manifest.template
Examples/nginx/: nginx.manifest.template
Examples/nodejs/: nodejs.manifest.template
Examples/nodejs-express-server/: nodejs.manifest.template
Examples/python-scipy-insecure/: Makefile  python.manifest.template
Examples/python-simple/: Makefile  python.manifest.template  run-tests.sh
Examples/pytorch/: pytorch.manifest.template
Examples/redis/: redis-server.manifest.template
Examples/tensorflow/: Makefile
LibOS/: Makefile  meson.build
LibOS/glibc-patches/: debug.patch  glibc-2.27-ppc64.patch  glibc-2.31-ppc64.patch  glibc-2.31.patch  glibc-2.33-ppc64.patch  series  syscalldb-api-ppc64.patch  syscalldb-api.patch
LibOS/include/: shim_fs.h  shim_internal.h
LibOS/shim/include/: generated-offsets.c  shim_context.h  shim_defs.h  shim_entry.h  shim_fs.h  shim_internal.h  shim_signal.h  shim_sysdep-ppc64.h  shim_table.h  shim_tcb.h  shim_thread.h  (+3 more)
LibOS/shim/test/abi/ppc64/: common.c  do_syscall.S  meson.build  stack.S  stack_env.S  test_exit.S  verify_env.c
LibOS/src/: shim_init.c
Pal/: Makefile
Pal/crt_init/: Makefile  user_start-ppc64.S
Pal/include/: pal_rtld.h
Pal/lib/: Makefile
Pal/regression/: Bootstrap.c  File.c  Makefile  Memory.c  Symbols.c  run_tests.sh  test_pal.py
Pal/src/: Makefile  db_misc.c  db_rtld.c  dl-machine-ppc64.h  do-rel.h  dynamic_link.h  pal_internal.h
Pal/src/host/Linux-common/: bogomips.c  meson.build  topo_info.c
Pal/src/host/Linux-common/arch/ppc64/: clone.S  meson.build  syscall.S  vfork.S  vfork.c
Pal/test/: Fork.c  Makefile  Server.c  run_tests.sh  test_pal.py
Runtime/: pal_loader
Scripts/: Makefile.Arch  Makefile.Host  Makefile.Test  Makefile.configs  Makefile.python  Makefile.rules  regression.py
common/include/: api.h  linux_socket.h  stat.h
common/src/: generated-offsets-print.c  generated_offsets_print.c
libos/include/: generated-offsets.c  generated_offsets.c  libos_fs.h  libos_internal.h  libos_table.h  libos_types.h  libos_utils.h  shim_fs.h  shim_internal.h  shim_table.h  shim_types.h  shim_utils.h
libos/src/: libos_init.c  libos_parser.c  shim_init.c  shim_parser.c
libos/test/abi/ppc64/: call_auxiliary.S  manifest.template  meson.build  stack.S  stack_env.S  stack_env.manifest.template  test_entrypoint.py  test_exit.S  tests.toml  verify_env.c
pal/include/: pal_rtld.h
pal/regression/: Bootstrap.c  Memory.c  Symbols.c  memory.c  test_pal.py
pal/src/: db_rtld.c  pal_rtld.c
python/graminelibos/: regression.py
subprojects/: glibc-2.31.wrap  glibc-2.33.wrap
(+336 files in other folders)
